syntax = "proto3";

option java_multiple_files = true;
option java_package = "hackathon.summer2019.grpc";
option java_outer_classname = "DataServiceProto";
option objc_class_prefix = "DS";

package grpc;

service DataService {
  rpc SendData (DataRequest) returns (DataResponse) {}
}


message DataRequest {
  string data = 1;
}

message DataResponse {
  string message = 1;
}